turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:14: error: ':' expected but ')' found.
def setColor(couleur) : Unit ={
                    ^LangtonsAnt:29: error: identifier expected but '}' found.
}
^