turmites.lessons.turmites.langton.Langton.scala.code
def step() {
	if (getCouleurSol() == Color.white) {
		setColor(Color.black);
		droite();
		avance();
	}else{
		setColor(Color.white);
		gauche();
		avance();
		}
	
}

def setColor(couleur) : Unit ={
	setBrosseCouleur(Color);
	baisseBrosse();
	leveBrosse();
}
